--- a/style.css
+++ b/style.css
@@ -83,6 +83,7 @@
       color: black;
       width: 102px;
       text-align: center;
+      border:  white solid 1px;
   }
   
   .nav_hov:hover{
@@ -91,7 +92,8 @@
   
   .change:hover{
       background-color: #6a6766;
-      border:  #6a6766 solid 2px;
+      border:  black solid 1px;
+      color: white;
   }
   /* ********************** */
        /* Home section  */
@@ -137,21 +139,23 @@
       background-color: #bd2907;
       padding: 6px;
       border: rgb(235 235 241) solid 2px;
-      border-radius: 14px;
+      border-radius: 10px;
       cursor: pointer;
       color: white;
       font-size: 20px;
+      
   }
   .btn:hover{
-      background-color: #dc4224;
+      background-color:white;
       border:  #dc4224 solid 2px;
+      color:#dc4224 ;
   }
   
   .chowmin{
       position: relative;
       width: 717px;
       left: 782px;
-      bottom: 267px;
+      bottom: 277px;
   }
   /*  *************************************** */
   
@@ -188,7 +192,7 @@
       position: relative;
       width: 478px;
       left: -10px;
-      bottom: 164px;
+      bottom:  172.3px;
       
   }
   
@@ -214,46 +218,161 @@
 
     
   /* ****************************** */
+  .section {
+    width: 668px;
+    margin: auto;
+    padding: 3px 3px;
+
+}
+
+.kkh {
+    width: 220px;
+    height: 220px;
+    background-color: #f9dda3;
+    border: solid black 1px;
+    display: inline-block;
+    border-radius: 12px;
+    margin: auto auto;
+    padding: 12px;
+    box-sizing: border-box;
+
+
+}
+
+h2 {
+    text-align: center;
+}
+  /* ****************************** */
+  
+  .content {
+    width: 1120px;
+    margin: 120px auto;
+    border: #f7ebeb solid 3px;
+    display: block;
+    background-color: #ffffff52;
+    border-radius: 20px;
+}
+
+.box {
+    display: inline-block;
+    padding: 6px;
+    margin: 14px 5px;
+    /* border: rgb(138, 71, 71) solid 1px; */
+    border-radius: 3px;
+}
+
+
+.cards {
+    width: 340px;
+    height: 250px;
+    border-radius: 14px;
+
+}
+
+p {
+    padding: 5px;
+}
+
+.tag {
+    font-size: 18px;
+    font-family: cursive;
+    font-style: italic;
+    font-weight: bold;
+}
+
+h1 {
+    text-align: center;
+}
+
+.box:hover {
+    border-color: rgb(232, 232, 232);
+    box-shadow: rgb(181 174 174) 0px 0.4rem 1.8rem;
+    box-sizing: border-box;
+}
+
+.btn1 {
+    background-color: cadetblue;
+    color: azure;
+    border: azure solid 1px;
+    border-radius: 4px;
+    margin-bottom: 2px;
+    font-size: 14px;
+    padding: 3px;
+    display: inline-block;
+    position: relative;
+    bottom: 18px;
+    left: 240px;
+}
+
+.btn1:hover {
+    background-color: azure;
+    color: cadetblue;
+    border: cadetblue solid 1px;
+}
+
+
+
+.horizontal{
+    background-color: tomato;
+    width: 100%;
+    height: 300px;
+}
+  /* ****************************** */
+
   a{
       text-decoration: none;
   }
   
   
   .cards{
-      border-radius: 59px;
-      float: left;
-      padding: 30px 30px;
-      width: 340px;
-      height: 250px;
-      transition: transform .1s ;
-      border: 0px;
-  }
+    border-radius: 32px;
+    float: left;
+    padding: 12px 1px;
+    width: 340px;
+    height: 250px;
+    border: 0px;
+}
       
   
   
-  .cards:hover{
-      transform: scale(1.06);
-      
-  }
-  
-  .list {
-      margin: auto;
-      width: 1200px;
-      
-  }
+
+.list {
+    width: 1120px;
+    margin: 9px auto;
+    border: #f7ebeb solid 3px;
+    display: block;
+    background-color: #ffffff52;
+    border-radius: 20px;
+    
+}
   .recipe{
       padding: 9px 9px;
       width: 20px;
       margin: auto;
       font-size: 23px;
-  }
-  h3{
-      padding: 4px 4px 4px 4px;
-  }
-  
-  span{
-      padding: 8px 8px;
-  }
+    }
+    h3{
+        padding: 4px 4px 4px 4px;
+    }
+    
+    .board{
+    display: inline-block;
+    padding: 6px;
+    margin: 14px 5px;
+    /* border: rgb(138, 71, 71) solid 1px; */
+    border-radius: 3px;
+}
+.board:hover{
+    border-color: rgb(232, 232, 232);
+    box-shadow: rgb(181 174 174) 0px 0.4rem 1.8rem;
+    box-sizing: border-box;;
+}
+.tag{
+    text-decoration: none;
+    color: black;
+    font-size: 18px;
+    padding: 0px 0px 0px 4px;
+}
   
   /* *************************** */
   
@@ -338,7 +457,7 @@
   }
   
     
-    .content {
+    .content1 {
       width: 360px;
       height: 40px;
       box-shadow: 2px 4px 10px rgba(0, 0, 0, .2);
